Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Globalphone.GitHub.io by GlobalPhone</title>
+    <title>Globalphone by GlobalPhone</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Globalphone.GitHub.io</h1>
+        <h1>Globalphone</h1>
         <h2>GlobalPhone parses, validates, and formats local and international phone numbers</h2>
         <a href="https://github.com/GlobalPhone" class="button"><small>Follow me on</small> GitHub</a>
       </div>
@@ -28,10 +28,7 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h1>
-<a id="globalphone" class="anchor" href="#globalphone" aria-hidden="true"><span class="octicon octicon-link"></span></a>GlobalPhone</h1>
-
-<p>GlobalPhone parses, validates, and formats local and international phone numbers according to the <a href="http://en.wikipedia.org/wiki/E.164">E.164 standard</a>.</p>
+          <p>GlobalPhone parses, validates, and formats local and international phone numbers according to the <a href="http://en.wikipedia.org/wiki/E.164">E.164 standard</a>.</p>
 
 <p><strong>Store and display phone numbers in your app.</strong> Accept phone number input in national or international format. Convert phone numbers to international strings (<code>+13125551212</code>) for storage and retrieval. Present numbers in national format (<code>(312) 555-1212</code>) in your UI.</p>
 
